--- a/templates/etleap-mp-existing-vpc.yaml
+++ b/templates/etleap-mp-existing-vpc.yaml
@@ -43,7 +43,7 @@ Metadata:
       DeploymentId:
         default: Deployment ID
       UserSpecifiedDeploymentSecret:
-        default: Deployment secret - optional
+        default: Deployment secret (optional)
       KeyPairName:
         default: Key pair name
       FirstName:
@@ -65,7 +65,7 @@ Parameters:
     Type: String
     Description: |
       The ARN of the secret used to communicate with Etleap. If left blank, one
-      will be generated for you.
+      is generated for you.
 
       The ARN of the secret that is used in the deployment will be present in
       the outputs.
@@ -89,14 +89,14 @@ Parameters:
     ConstraintDescription: Must be between 1 and 255 characters long.
   Email:
     Type: String
-    Description: Your email address. You may opt-in to register your deployment with Etleap. If you do, Etleap requires that your email domain is globally unique and that it isn't a personal email domain (such as gmail.com or yahoo.com), so please use your company email address.
+    Description: Your email address. You may opt-in to register your deployment with Etleap. If you do, Etleap requires that your email domain is globally unique and that it isn't a personal email domain (such as gmail.com or yahoo.com), so use your company email address.
     MaxLength: 255
     AllowedPattern: '^[\x20-\x45]?[\w-\+]+(\.[\w]+)*@[\w-]+(\.[\w]+)*(\.[a-z]{2,})$'
-    ConstraintDescription: Please provide a valid email address. At most 255 characters.
+    ConstraintDescription: Provide a valid email address. At most 255 characters.
   SetupPassword:
     Type: String
     Description: |
-      Your initial login password. You will be asked to change this when you log
+      Your initial login password. You will be asked to change this password when you log
       in for the first time.
     MinLength: 8
     MaxLength: 64
@@ -119,7 +119,7 @@ Parameters:
     Description: CIDR block allowed remote access to the environment.
     Default: 0.0.0.0/0
     AllowedPattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}(\/([0-9]|[1-2][0-9]|3[0-2]))?$'
-    ConstraintDescription: Please provide a valid CIDR block.
+    ConstraintDescription: Provide a valid CIDR block.
   AppInstanceType:
     Type: String
     Description: The EC2 instance type.
